[package]
name = "pioneer"
version = "0.0.1"
authors = ["Nikola Hristov <nikola@playform.cloud>"]
edition = "2018"
description = "Pioneer is a framework for building web applications of all sizes, with a beautiful development experience and flexible filesystem-based routing."
documentation = "https://docs.rs/pioneer/"
readme = "README.md"
repository = "https://github.com/nhristov/pioneer"
license-file = "LICENSE"
keywords = ["pioneer", "web", "framework", "ssr", "svelte"]
categories = ["web-programming"]

[dependencies]
